fix:подправил графики

--- a/notebooks/01_data_and_task_setup.ipynb
+++ b/notebooks/01_data_and_task_setup.ipynb
@@ -3,57 +3,84 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "О задаче",
-   "id": "501dd7e978427546"
-  },
-  {
-   "metadata": {},
-   "cell_type": "markdown",
    "source": [
-    "Задача: Бинарная классификация.\n",
+    "Задача регрессии (Regression).\n",
     "\n",
-    "Цель: На основе медицинских признаков пациента предсказать, есть ли у него диабет (Outcome = 1) или нет (Outcome = 0).\n",
+    "1. \n",
+    "Мы будем решать задачу прогнозирования стоимости недвижимости (price) на основе её характеристик. Это классическая задача регрессии, где целевая переменная (price) является непрерывной числовой величиной, а нам нужно построить модель, которая сможет предсказывать её значение по набору входных признаков.\n",
     "\n",
+    "2. \n",
+    "Общее описание\n",
+    "Датасет содержит информацию о продажах жилой недвижимости в округе Кинг (King County, Washington, USA) за период 2014-2015 годов. Включает разнообразные характеристики домов, которые могут влиять на их рыночную стоимость.\n",
+    "\n",
+    "Ключевые характеристики данных:\n",
+    "Количество записей: 918 (примерно)\n",
+    "\n",
+    "Количество признаков: 20 (включая целевую переменную)\n",
+    "\n",
+    "Период: май 2014 - май 2015\n",
+    "\n",
+    "География: округ Кинг (Сиэтл и пригороды)\n",
+    "\n",
+    "3. \n",
     "Целевая переменная:\n",
+    "price (float): Цена продажи дома (в долларах США). Диапазон значений: ~$80,000 - $3,000,000+.\n",
     "\n",
-    "Outcome (Диагноз диабета).\n",
+    "Основные признаки:\n",
+    "Архитектурные характеристики:\n",
+    "bedrooms (int/float): Количество спален.\n",
     "\n",
-    "Признаки (Features):\n",
+    "bathrooms (float): Количество ванных комнат (может быть дробным: 1.75, 2.5 и т.д.).\n",
     "\n",
-    "Pregnancies (Беременности)\n",
+    "sqft_living (int): Жилая площадь в квадратных футах.\n",
     "\n",
-    "Glucose (Глюкоза)\n",
+    "sqft_lot (int): Общая площадь участка в квадратных футах.\n",
     "\n",
-    "BloodPressure (Артериальное давление)\n",
+    "floors (float): Количество этажей (может быть дробным: 1.5, 2.5 и т.д.).\n",
     "\n",
-    "SkinThickness (Толщина кожной складки)\n",
+    "sqft_above (int): Площадь над землей (без подвала).\n",
     "\n",
-    "Insulin (Инсулин)\n",
+    "sqft_basement (int): Площадь подвала.\n",
     "\n",
-    "BMI (Индекс массы тела)\n",
+    "Качество и состояние:\n",
+    "grade (int): Оценка качества строительства и дизайна (1-13, где выше = лучше).\n",
     "\n",
-    "DiabetesPedigreeFunction (Показатель наследственности по диабету)\n",
+    "condition (int): Оценка общего состояния дома (1-5, где выше = лучше).\n",
     "\n",
-    "Age (Возраст)"
+    "yr_built (int): Год постройки (1900-2015).\n",
+    "\n",
+    "yr_renovated (int): Год последнего ремонта (0 = не ремонтировался).\n",
+    "\n",
+    "Локационные признаки:\n",
+    "waterfront (int): Бинарный признак (0/1). Наличие вида на воду.\n",
+    "\n",
+    "view (int): Качество вида от 0 до 4 (где выше = лучше вид).\n",
+    "\n",
+    "zipcode (str): Почтовый индекс.\n",
+    "\n",
+    "lat (float): Географическая широта.\n",
+    "\n",
+    "long (float): Географическая долгота.\n",
+    "\n",
+    "Контекстные признаки:\n",
+    "sqft_living15 (int): Средняя жилая площадь 15 ближайших соседей.\n",
+    "\n",
+    "sqft_lot15 (int): Средняя площадь участка 15 ближайших соседей.\n",
+    "\n",
+    "Вспомогательные признаки:\n",
+    "id (str): Уникальный идентификатор объекта.\n",
+    "\n",
+    "date (str): Дата продажи в формате \"YYYYMMDDThhmmss\".\n",
+    "\n",
+    "4.\n",
+    "Обоснование выбора задачи\n",
+    "Данная задача регрессии обладает значительной практической ценностью — разработанная модель может стать полезным инструментом для риелторов и инвесторов, помогая объективно оценивать стоимость недвижимости и принимать обоснованные финансовые решения.\n",
+    "\n",
+    "С научной точки зрения датасет представляет интерес благодаря разнообразию признаков, включая географические координаты, что позволяет изучать пространственные закономерности и сравнивать различные подходы к регрессионному анализу.\n",
+    "\n",
+    "Для образовательных целей этот классический датасет идеально подходит для освоения методов машинного обучения — от предобработки данных до интерпретации результатов, обеспечивая комплексное понимание реальных задач анализа данных."
    ],
-   "id": "c70dbf13305b99b2"
-  },
-  {
-   "metadata": {},
-   "cell_type": "markdown",
-   "source": [
-    "Для данных данных мы решили построить и оценить модель регрессии. В качестве модели взяли логистическую регрессию, так как задача классификации. \n",
-    "Задача является бинарной классификацией (наличие или отсутствие диабета), для которой логистическая регрессия является оптимальным методом, так как она специально разработана для предсказания вероятности принадлежности к одному из двух классов.\n",
-    "\n",
-    "Во-вторых, критически важным аспектом в медицинской диагностике является интерпретируемость модели. Логистическая регрессия предоставляет четкие коэффициенты, которые показывают влияние каждого медицинского признака на риск заболевания, что позволяет врачам понять логику принятия решений.\n",
-    "\n",
-    "В-третьих, модель дает не просто ответ \"болен/здоров\", а вероятность от 0 до 100%. Это полезно, потому что врачи могут сами решать, при каком проценте риска стоит назначать дополнительные анализы. Например, если вероятность выше 70% — отправить на углубленное обследование.\n",
-    "\n",
-    "В-четвертых, у нас не миллионы записей, а несколько сотен наблюдений. Логистическая регрессия хорошо работает на таких объемах, не перегружает систему и быстро обучается.\n",
-    "\n",
-    "И последнее — результаты логистической регрессии часто совпадают с медицинской логикой. Например, она четко показывает, что уровень сахара в крови и лишний вес — это главные факторы риска. То есть модель не выдает что-то странное, а подтверждает уже известные врачам закономерности."
-   ],
-   "id": "cc880e607b873ee9"
+   "id": "501dd7e978427546"
   },
   {
    "metadata": {},
@@ -61,7 +88,7 @@
    "outputs": [],
    "execution_count": null,
    "source": "",
-   "id": "33c0651e848004a6"
+   "id": "b931a286e0ddc87e"
   }
  ],
  "metadata": {
