add advanced model

--- a/notebooks/03_advanced_models.ipynb
+++ b/notebooks/03_advanced_models.ipynb
@@ -521,9 +521,12 @@
    "source": [
     "## Обучение и оценка продвинутых моделей\n",
     "### Используем модель XGBoost, так как она имеет следующие преимущества:\n",
-    "- улавливает сложные нелинейные зависимости\n",
+    "- улавливает сложные нелинейные зависимости в характеристиках домов\n",
     "- устойчивость к выбросам\n",
-    "- устойчивость к переобучению"
+    "- устойчивость к переобучению\n",
+    "- работа с различными типами данных и распределениями\n",
+    "- RandomForest менее точный на многих задачах\n",
+    "- GradientBoosting требует более сложной настройки"
    ]
   },
   {
@@ -696,7 +699,8 @@
     "print(f\"Продвинутая модель показала значительное улучшение по сравнению с линейной регрессией:\")\n",
     "print(f\"  Улучшение R²: {improvement:.2f}%\")\n",
     "print(f\"  Снижение MAE: {((lr_metrics['MAE_test'] - best_metrics['MAE_test']) / lr_metrics['MAE_test'] * 100):.2f}%\")\n",
-    "print(f\"  Снижение RMSE: {((lr_metrics['RMSE_test'] - best_metrics['RMSE_test']) / lr_metrics['RMSE_test'] * 100):.2f}%\")"
+    "print(f\"  Снижение RMSE: {((lr_metrics['RMSE_test'] - best_metrics['RMSE_test']) / lr_metrics['RMSE_test'] * 100):.2f}%\")\n",
+    "\n"
    ]
   },
   {
@@ -717,8 +721,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "0de88159-866a-43d8-814e-ead365e63077",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('../data/interim/advanced_model.pkl', 'wb') as f:\n",
+    "    pickle.dump(best_metrics, f)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9780f0b0-01ba-453b-b1ff-460e2fa3b9d8",
    "metadata": {},
    "outputs": [],
    "source": []
